# Tacho-Bridge-App

./: .eslintignore  .gitignore  CHANGELOG.md  LICENSE  README.md  build-mac.sh  eslint.config.js  global.d.ts  package-lock.json  package.json  quasar.config.js  quasar.config.ts  tsconfig.json
.cargo/: config.toml
src/: shims-vue.d.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_connect.rs  config.rs  global_app_handle.rs  lib.rs  logger.rs  main.rs  menu_plugin.rs  mqtt.rs  smart_card.rs  tray.rs
src/components/: SmartCardList.vue  TachoMainComponent.vue  models.ts
src/css/: app.scss  quasar.variables.scss
src/layouts/: MainLayout.vue
src/pages/: IndexPage.vue
